# riptop

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/probes/: memory_usage_info.h  memory_usage_probe.h  process_list.h  process_list_probe.h  system_info.h  system_info_probe.h  system_times.h  system_times_probe.h
include/services/: acquisition_thread.h  system_data_service.h
include/ui/: main_component.h  main_ui.h  process_list_component.h  system_info_component.h  ui.h
include/utils/: formatter.h  utils.h
src/: CMakeLists.txt  main.cpp
src/probes/: CMakeLists.txt  memory_usage_info.cpp  memory_usage_probe.cpp  process_list.cpp  process_list_probe.cpp  system_info.cpp  system_info_probe.cpp  system_times.cpp  system_times_probe.cpp
src/services/: CMakeLists.txt  acquisition_thread.cpp  system_data_service.cpp
src/ui/: CMakeLists.txt  main_component.cpp  main_ui.cpp  process_list_component.cpp  system_info_component.cpp  ui.cpp
src/utils/: CMakeLists.txt  formatter.cpp  utils.cpp
test/: CMakeLists.txt  test_utils.cpp
